[random bug] found a css issue with the dnd helper in the squashtree

--- a/tm/tm.web/src/main/webapp/styles/squashtree.css
+++ b/tm/tm.web/src/main/webapp/styles/squashtree.css
@@ -151,21 +151,15 @@ div#tree-pane li a.ui-state-default, div#tree-pane li a.ui-state-active{	 border
 
 #vakata-dragged.jstree-squashtest ins { background:transparent !important; }
 #vakata-dragged.jstree-squashtest .jstree-ok { 
-	background-image: url("../images/squashtree.png") !important;
-	background-position : -2px -53px; 
-	background-repeat : no-repeat ; 
-
+	background: url("../images/squashtree.png") -2px -53px no-repeat !important;
 }
+
 #vakata-dragged.jstree-squashtest .jstree-invalid { 
-	background-image :url("../images/squashtree.png") !important; 
-	background-position : -18px -53px ;
-	background-repeat : no-repeat ; 
+	background :url("../images/squashtree.png") -18px -53px no-repeat !important ; 
 }
 
 #jstree-marker.jstree-squashtest { 
-	background-image:url("../images/squashtree.png") !important;
-	background-position : -41px -57px;
-	background-repeat : no-repeat ; 
+	background:url("../images/squashtree.png") -41px -57px no-repeat  !important;
 }
 
 .jstree-squashtest a.jstree-search { color:aqua; }
